--- a/index.html
+++ b/index.html
@@ -78,10 +78,16 @@
         </div>
     </header>
 
-    <!------------- btn ----------------->
-        <div class="btn__contents">
+    <!------------- give ----------------->
 
+    <section class="give">
+        <h1 class="give__catch">今だけ!</h1>
+        <div class="give__item">
+            <div class="give__item--title">フェイシャルコース</div>
+            <div class="give__item--info"><span class="large">3</span><span class="small">回プレゼント！</small></div>
         </div>
+        <p>クレンジング/洗顔/フェイスヒーリング/整肌</p>
+    </section>
 
     <!------------- mask ----------------->
 
