--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     <section class="header">
         <div class="header__container">
             <div class="header__logo">
-                <img class="header__logo-01" src="/assets/image/kbl.svg" alt="KLB">
-                <img class="header__logo-02" src="/assets/image/logo.svg" alt="Kirameki Beauty Labo">
+                <img src="/assets/image/logo.svg" alt="Kirameki Beauty Labo">
             </div>
             <ul class="btn__form">
                 <li><a href="#" class="btn btn__form-01">お問い合わせ</a></li>
@@ -54,8 +53,7 @@
         <div class="top__container">
             <div class="top__left">
                 <div class="top__left--title">
-                    <h1>全身脱毛</h1>
-                    <h2>(顔・VIO込)</h2>
+                    <img src="/assets/image/top_text.png" alt="全身脱毛　顔・VIO込">
                 </div>
             </div>
             <div class="top__right">
@@ -89,11 +87,14 @@
         <p>クレンジング/洗顔/フェイスヒーリング/整肌</p>
     </section>
 
-    <!------------- mask ----------------->
+    <!------------- free ----------------->
 
-        <section class="mask">
-            <div class="mask__container">
-
+        <section class="free">
+            <div class="free__container">
+                <div class="free__title">無料体験実施中</div>
+                <ul class="btn__form">
+                    <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら(無料)</a></li>
+                </ul>
             </div>
         </section>
 
