--- a/index.html
+++ b/index.html
@@ -113,30 +113,83 @@
             <div class="point__logo">
                 <img src="/assets/image/point_logo.png" alt="Kirameki Beauty Labo"> が選ばれる
             </div>
-            <h1>3つのポイント</h1>
+            <h1 class="point__second--main">3つのポイント</h1>
+            <!-------- point01 --------->
             <div class="point__item">
                 <div class="point__item--title"><div class="point__item_01">POINT1</div><div class="point__item_02">通い放題</div></div>
                 <div class="point__item--info">
-                    <p>納得いくまで何度でも、追加料金なく安心して通っていただけます。</p>
-                    <ol class="flex">
+                    <p class="point__info--catch">納得いくまで何度でも、追加料金なく安心して通っていただけます。</p>
+                    <ol class="point__item--detail flex">
                         <li>
-                            <div class="point__logo point__logo_01"><img src="/assets/image/logo.svg" alt="Kirameki Beauty Labo"></div>
+                            <div class="point__place point__place_01"><img src="/assets/image/logo.svg" alt="Kirameki Beauty Labo"></div>
                             <div class="point__note point__note_01">来店1回で全身1回</div>
                         </li>
                         <li>
-                            <div class="point__logo point__logo_02">Aサロン</div>
+                            <div class="point__place point__place_02">Aサロン</div>
                             <div class="point__note point__note_02">来店3回で全身1回</div>
                         </li>
                     </ol>
                 </div>
             </div>
+            <!-------- point02 --------->
+            <div class="point__item point__second">
+                <div class="point__item--title"><div class="point__item_01">POINT2</div><div class="point__item_02">通い放題</div></div>
+                <div class="point__item--info point__item--info_02">
+                    <p class="point__info--catch_02">「全身プラン」と、施術部位を選べる「部分脱毛プラン」から自由にお選びいただけます。</p>
+                    <ol class="flex">
+                        <li>
+                            <h1 class="point__second--main_02">全身プラン</h1>
+                            <div class="point__second-pic"><img src="/assets/image/bodyplan_sp.png" alt="全身プラン"></div>
+                        </li>
+                    </ol>
+                    <h1 class="point__second--main_03">部分脱毛プラン</h1>
+                    <ol class="point__item--detail_02 flex">
+                        <li>
+                            <div class="point__second-pic"><img src="/assets/image/plan_01.jpg" alt=""></div>
+                            <div class="point__second--name point__second--name_01">うなじ</div>
+                        </li>
+                        <li>
+                            <div class="point__second-pic"><img src="/assets/image/plan_02.jpg" alt=""></div>
+                            <div class="point__second--name point__second--name_02">ワキ</div>
+                        </li>
+                        <li>
+                            <div class="point__second-pic"><img src="/assets/image/plan_03.jpg" alt=""></div>
+                            <div class="point__second--name point__second--name_03">Oライン</div>
+                        </li>
+                        <li>
+                            <div class="point__second-pic"><img src="/assets/image/plan_04.jpg" alt=""></div>
+                            <div class="point__second--name point__second--name_04">おでこ</div>
+                        </li>
+                        <li>
+                            <div class="point__second-pic"><img src="/assets/image/plan_05.jpg" alt=""></div>
+                            <div class="point__second--name point__second--name_05">あご</div>
+                        </li>
+                        <li>
+                            <div class="point__second-pic"><img src="/assets/image/plan_06.jpg" alt=""></div>
+                            <div class="point__second--name point__second--name_06">フェスライン</div>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+            <!-------- point02 --------->
+            <div class="point__item point__third">
+                <div class="point__item--title"><div class="point__item_01">POINT3</div><div class="point__item_02">通い放題</div></div>
+                <div class="point__item--info point__item--info_03">
+                    <p class="point__info--catch_03">提携医療機関のサポートがありますので、ご安心ください。</p>
+                </div>
+            </div>
         </div>
     </section>
 
-    <!------------- questions ----------------->
+    <!------------- contact ----------------->
 
-    <section class="qu">
-
+    <section class="contact contact_02">
+        <div class="contact__container">
+            <h1 class="contact__title">無料体験実施中！</h1>
+            <ul class="btn__form">
+                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら(無料)</a></li>
+            </ul>
+        </div>
     </section>
 
     <!------------- btn ----------------->
