--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </ol>
                 </div>
             </div>
-            <!-------- point02 --------->
+            <!-------- point03 --------->
             <div class="point__item point__third">
                 <div class="point__item--title"><div class="point__item_01">POINT3</div><div class="point__item_02">通い放題</div></div>
                 <div class="point__item--info point__item--info_03">
@@ -192,13 +192,58 @@
         </div>
     </section>
 
-    <!------------- btn ----------------->
-    <div class="btn__contents">
-        <div class="btn__item">
+    <!------------- course ----------------->
 
+    <section class="course">
+        <div class="course__title">ほかにも選べる！</div>
+        <h1 class="course__main">2つのコース</h1>
+        <div class="course__item">
+            <div class="course__item--title">ボディーコース</div>
+            <div class="course__item--info">
+                <p class="course__info--catch">ボディケアのスペシャリストが、お客様のお肌を優しく施術いたします。</p>
+                <div class="course__pic"><img src="/assets/image/body.jpg" alt=""></div>
+            </div>
         </div>
-    </div>
+        <div class="course__item">
+            <div class="course__item--title">フェイシャルコース</div>
+            <div class="course__item--info">
+                <p class="course__info--catch">確かな技術を持つエステティシャンが、お客様の理想のお肌に近づけます。</p>
+                <div class="course__pic"><img src="/assets/image/facepack.jpg" alt=""></div>
+            </div>
+        </div>
+    </section>
 
+    <!------------- voice ----------------->
+
+    <section class="voice">
+        <h1 class="voice__main">お客様の声</h1>
+        <div class="swiper__container">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="swiper__img"><img src="assets/image/ppl_01.png" alt=""></div>
+                        <div class="swiper__ppl">Aさん</div>
+                        <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="swiper__img"><img src="assets/image/ppl_02.png" alt=""></div>
+                      <div class="swiper__ppl">Bさん</div>
+                      <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="swiper__img"><img src="assets/image/ppl_03.png" alt=""></div>
+                      <div class="swiper__ppl">Cさん</div>
+                      <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                    </div>
+              
+                </div>
+          </div>
+          <div class="swiper-pagination"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+      </div>
+
+    </section>
 
     </main>
 
