--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="top__left">
                 <picture class="top__left--title">
                     <source srcset="/assets/image/top_text.png" media="(min-width: 768px)">
-                    <img class="top__left--title-sp" src="/assets/image/top_text_sp.png" alt="全身脱毛　顔・VIO込">
+                    <img class="top__left--title-sp" src="/assets/image/top_text.png" alt="全身脱毛　顔・VIO込">
                 </picture>
             </div>
             <div class="top__right">
@@ -136,7 +136,7 @@
                 <div class="point__item--title"><div class="point__item_01">POINT2</div><div class="point__item_02">通い放題</div></div>
                 <div class="point__item--info point__item--info_02">
                     <p class="point__info--catch_02">「全身プラン」と、施術部位を選べる「部分脱毛プラン」から自由にお選びいただけます。</p>
-                    <ol class="flex">
+                    <ol class="point__box flex">
                         <li>
                             <h1 class="point__second--main_02">全身プラン</h1>
                             <div class="point__second-pic"><img src="/assets/image/bodyplan_sp.png" alt="全身プラン"></div>
@@ -144,27 +144,27 @@
                     </ol>
                     <h1 class="point__second--main_03">部分脱毛プラン</h1>
                     <ol class="point__item--detail_02 flex">
-                        <li>
+                        <li class="point__second--boxes">
                             <div class="point__second-pic"><img src="/assets/image/plan_01.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_01">うなじ</div>
                         </li>
-                        <li>
+                        <li class="point__second--boxes">
                             <div class="point__second-pic"><img src="/assets/image/plan_02.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_02">ワキ</div>
                         </li>
-                        <li>
+                        <li class="point__second--boxes">
                             <div class="point__second-pic"><img src="/assets/image/plan_03.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_03">Oライン</div>
                         </li>
-                        <li>
+                        <li class="point__second--boxes">
                             <div class="point__second-pic"><img src="/assets/image/plan_04.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_04">おでこ</div>
                         </li>
-                        <li>
+                        <li class="point__second--boxes">
                             <div class="point__second-pic"><img src="/assets/image/plan_05.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_05">あご</div>
                         </li>
-                        <li>
+                        <li class="point__second--boxes">
                             <div class="point__second-pic"><img src="/assets/image/plan_06.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_06">フェスライン</div>
                         </li>
@@ -221,39 +221,65 @@
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="swiper__img"><img src="assets/image/ppl_01.png" alt=""></div>
-                        <div class="swiper__ppl">Aさん</div>
-                        <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                        <div class="voice__item">
+                            <div class="voice__title">フェイシャルコース</div>
+                            <div class="voice__down">
+                                <div class="voice__img"><img src="/assets/image/sample_01.png" alt=""></div>
+                                <div class="voice__down--right">
+                                    <p class="voice__name">20代 R.Bさま/大学生</p>
+                                    <p class="voice__note">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="swiper-slide">
-                      <div class="swiper__img"><img src="assets/image/ppl_02.png" alt=""></div>
-                      <div class="swiper__ppl">Bさん</div>
-                      <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                        <div class="voice__item">
+                            <div class="voice__title">脱毛コース</div>
+                            <div class="voice__down">
+                                <div class="voice__img"><img src="/assets/image/sample_02.png" alt=""></div>
+                                <div class="voice__down--right">
+                                    <p class="voice__name">30代 N.Tさま/会社員</p>
+                                    <p class="voice__note">納得いくまで何度も、追加料金なく安心して通うことができて大変満足しています。</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="swiper-slide">
-                      <div class="swiper__img"><img src="assets/image/ppl_03.png" alt=""></div>
-                      <div class="swiper__ppl">Cさん</div>
-                      <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+                        <div class="voice__item">
+                            <div class="voice__title">ボディコース</div>
+                            <div class="voice__down">
+                                <div class="voice__img"><img src="/assets/image/sample_03.png" alt=""></div>
+                                <div class="voice__down--right">
+                                    <p class="voice__name">20代 Y.Kさま/会社員</p>
+                                    <p class="voice__note">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-              
                 </div>
-          </div>
-          <div class="swiper-pagination"></div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-      </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
 
+    <!------------- contact ----------------->
+
+    <section class="contact contact_03">
+        <div class="contact__container">
+            <h1 class="contact__title">無料体験実施中！</h1>
+            <ul class="btn__form">
+                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら(無料)</a></li>
+            </ul>
+        </div>
     </section>
 
     </main>
 
-
-
     <!------------- footer ----------------->
 
     <footer class="footer">
-        <div class="footer__container">
-
+        <div class="footer__img">
+            <img src="/assets/image/footer_logo.svg" alt="">
         </div>
     </footer>
 
