--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
     <section class="free">
         <h1 class="free__item">無料体験内容</h1>
-        <div class="free__item--info free__item--info-01">〈脱毛体験〉V<small>(10分)or</small>両脇<small>(10分)</small></div>
-        <div class="free__item--info free__item--info-02">〈美顔体験〉フェイシャルトリートメント<small>(40分コース1回)</small></div>
+        <div class="free__item--info free__item--info-01">〈脱毛体験〉V<small class="free__small">(10分)or</small>両脇<small class="free__small">(10分)</small></div>
+        <div class="free__item--info free__item--info-02">〈美顔体験〉フェイシャルトリートメント<small class="free__small">(40分コース1回)</small></div>
     </section>
 
     <!------------- point ----------------->
