--- a/index.html
+++ b/index.html
@@ -145,27 +145,27 @@
                     <h1 class="point__second--main_03">部分脱毛プラン</h1>
                     <ol class="point__item--detail_02 flex">
                         <li class="point__second--boxes">
-                            <div class="point__second-pic"><img src="/assets/image/plan_01.jpg" alt=""></div>
+                            <div class="point__second-pic_02"><img src="/assets/image/plan_01.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_01">うなじ</div>
                         </li>
                         <li class="point__second--boxes">
-                            <div class="point__second-pic"><img src="/assets/image/plan_02.jpg" alt=""></div>
+                            <div class="point__second-pic_02"><img src="/assets/image/plan_02.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_02">ワキ</div>
                         </li>
                         <li class="point__second--boxes">
-                            <div class="point__second-pic"><img src="/assets/image/plan_03.jpg" alt=""></div>
+                            <div class="point__second-pic_02"><img src="/assets/image/plan_03.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_03">Oライン</div>
                         </li>
                         <li class="point__second--boxes">
-                            <div class="point__second-pic"><img src="/assets/image/plan_04.jpg" alt=""></div>
+                            <div class="point__second-pic_02"><img src="/assets/image/plan_04.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_04">おでこ</div>
                         </li>
                         <li class="point__second--boxes">
-                            <div class="point__second-pic"><img src="/assets/image/plan_05.jpg" alt=""></div>
+                            <div class="point__second-pic_02"><img src="/assets/image/plan_05.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_05">あご</div>
                         </li>
                         <li class="point__second--boxes">
-                            <div class="point__second-pic"><img src="/assets/image/plan_06.jpg" alt=""></div>
+                            <div class="point__second-pic_02"><img src="/assets/image/plan_06.jpg" alt=""></div>
                             <div class="point__second--name point__second--name_06">フェスライン</div>
                         </li>
                     </ol>
@@ -197,18 +197,20 @@
     <section class="course">
         <div class="course__title">ほかにも選べる！</div>
         <h1 class="course__main">2つのコース</h1>
-        <div class="course__item">
-            <div class="course__item--title">ボディーコース</div>
-            <div class="course__item--info">
-                <p class="course__info--catch">ボディケアのスペシャリストが、お客様のお肌を優しく施術いたします。</p>
-                <div class="course__pic"><img src="/assets/image/body.jpg" alt=""></div>
+        <div class="course__box">
+            <div class="course__item">
+                <div class="course__item--title">ボディーコース</div>
+                <div class="course__item--info">
+                    <p class="course__info--catch">ボディケアのスペシャリストが、お客様のお肌を優しく施術いたします。</p>
+                    <div class="course__pic"><img src="/assets/image/body.jpg" alt=""></div>
+                </div>
             </div>
-        </div>
-        <div class="course__item">
-            <div class="course__item--title">フェイシャルコース</div>
-            <div class="course__item--info">
-                <p class="course__info--catch">確かな技術を持つエステティシャンが、お客様の理想のお肌に近づけます。</p>
-                <div class="course__pic"><img src="/assets/image/facepack.jpg" alt=""></div>
+            <div class="course__item">
+                <div class="course__item--title">フェイシャルコース</div>
+                <div class="course__item--info course__item--info_02">
+                    <p class="course__info--catch">確かな技術を持つエステティシャンが、お客様の理想のお肌に近づけます。</p>
+                    <div class="course__pic"><img src="/assets/image/facepack.jpg" alt=""></div>
+                </div>
             </div>
         </div>
     </section>
@@ -235,7 +237,7 @@
                     <div class="swiper-slide">
                         <div class="voice__item">
                             <div class="voice__title">脱毛コース</div>
-                            <div class="voice__down">
+                            <div class="voice__down voice__down_02">
                                 <div class="voice__img"><img src="/assets/image/sample_02.png" alt=""></div>
                                 <div class="voice__down--right">
                                     <p class="voice__name">30代 N.Tさま/会社員</p>
