--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="top__left">
                 <picture class="top__left--title">
                     <source srcset="/assets/image/top_text.png" media="(min-width: 768px)">
-                    <img class="top__left--title-sp" src="/assets/image/top_text.png" alt="全身脱毛　顔・VIO込">
+                    <img class="top__left--title-sp" src="/assets/image/top_text_sp.png" alt="全身脱毛　顔・VIO込">
                 </picture>
             </div>
             <div class="top__right">
@@ -94,7 +94,7 @@
         <div class="contact__container">
             <h1 class="contact__title">無料体験実施中！</h1>
             <ul class="btn__form">
-                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら(無料)</a></li>
+                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら（無料）</a></li>
             </ul>
         </div>
     </section>
@@ -218,49 +218,51 @@
     <!------------- voice ----------------->
 
     <section class="voice">
-        <h1 class="voice__main">お客様の声</h1>
-        <div class="swiper__container">
-            <div class="swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="voice__item">
-                            <div class="voice__title">フェイシャルコース</div>
-                            <div class="voice__down">
-                                <div class="voice__img"><img src="/assets/image/sample_01.png" alt=""></div>
-                                <div class="voice__down--right">
-                                    <p class="voice__name">20代 R.Bさま/大学生</p>
-                                    <p class="voice__note">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。</p>
+        <div class="voice__content">
+            <h1 class="voice__main">お客様の声</h1>
+            <div class="swiper__container">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="voice__item">
+                                <div class="voice__title">フェイシャルコース</div>
+                                <div class="voice__down">
+                                    <div class="voice__img"><img src="/assets/image/sample_01.png" alt=""></div>
+                                    <div class="voice__down--right">
+                                        <p class="voice__name">20代 R.Bさま/大学生</p>
+                                        <p class="voice__note">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="voice__item">
-                            <div class="voice__title">脱毛コース</div>
-                            <div class="voice__down voice__down_02">
-                                <div class="voice__img"><img src="/assets/image/sample_02.png" alt=""></div>
-                                <div class="voice__down--right">
-                                    <p class="voice__name">30代 N.Tさま/会社員</p>
-                                    <p class="voice__note">納得いくまで何度も、追加料金なく安心して通うことができて大変満足しています。</p>
+                        <div class="swiper-slide">
+                            <div class="voice__item">
+                                <div class="voice__title">脱毛コース</div>
+                                <div class="voice__down voice__down_02">
+                                    <div class="voice__img"><img src="/assets/image/sample_02.png" alt=""></div>
+                                    <div class="voice__down--right">
+                                        <p class="voice__name">30代 N.Tさま/会社員</p>
+                                        <p class="voice__note">納得いくまで何度も、追加料金なく安心して通うことができて大変満足しています。</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="voice__item">
-                            <div class="voice__title">ボディコース</div>
-                            <div class="voice__down">
-                                <div class="voice__img"><img src="/assets/image/sample_03.png" alt=""></div>
-                                <div class="voice__down--right">
-                                    <p class="voice__name">20代 Y.Kさま/会社員</p>
-                                    <p class="voice__note">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。</p>
+                        <div class="swiper-slide">
+                            <div class="voice__item">
+                                <div class="voice__title">ボディコース</div>
+                                <div class="voice__down">
+                                    <div class="voice__img"><img src="/assets/image/sample_03.png" alt=""></div>
+                                    <div class="voice__down--right">
+                                        <p class="voice__name">20代 Y.Kさま/会社員</p>
+                                        <p class="voice__note">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="swiper-pagination"></div>
             </div>
-            <div class="swiper-pagination"></div>
         </div>
     </section>
 
