--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
             <!-------- point02 --------->
             <div class="point__item point__second">
-                <div class="point__item--title"><div class="point__item_01">POINT2</div><div class="point__item_02">通い放題</div></div>
+                <div class="point__item--title"><div class="point__item_01">POINT2</div><div class="point__item_02">プランが選べる</div></div>
                 <div class="point__item--info point__item--info_02">
                     <p class="point__info--catch_02">「全身プラン」と、施術部位を選べる「部分脱毛プラン」から自由にお選びいただけます。</p>
                     <ol class="point__box flex">
@@ -173,7 +173,7 @@
             </div>
             <!-------- point03 --------->
             <div class="point__item point__third">
-                <div class="point__item--title"><div class="point__item_01">POINT3</div><div class="point__item_02">通い放題</div></div>
+                <div class="point__item--title"><div class="point__item_01">POINT3</div><div class="point__item_02">安心のサポート</div></div>
                 <div class="point__item--info point__item--info_03">
                     <p class="point__info--catch_03">提携医療機関のサポートがありますので、ご安心ください。</p>
                 </div>
