--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <ul class="btn__form">
                 <li><a href="#" class="btn btn__form-01">お問い合わせ</a></li>
-                <li><a href="#" class="btn btn__form-02">カウンセリング予約(無料)</a></li>
+                <li><a href="#" class="btn btn__form-02">カウンセリング予約<small class="header__small">(無料)</small></a></li>
             </ul>
         </div>
     </section>
@@ -51,12 +51,12 @@
 
     <header class="top">
         <div class="top__container">
-            <div class="top__left">
+            <h1 class="top__left">
                 <picture class="top__left--title">
                     <source srcset="/assets/image/top_text.png" media="(min-width: 768px)">
                     <img class="top__left--title-sp" src="/assets/image/top_text_sp.png" alt="全身脱毛　顔・VIO込">
                 </picture>
-            </div>
+            </h1>
             <div class="top__right">
                 <div class="top__right--upper">
                     <div class="top__right--item">
@@ -80,12 +80,12 @@
     <!------------- give ----------------->
 
     <section class="give">
-        <h1 class="give__catch">今だけ!</h1>
+        <div class="give__catch">今だけ！</div>
         <div class="give__item">
-            <div class="give__item--title">フェイシャルコース</div>
+            <h3 class="give__item--title">フェイシャルコース</h3>
             <div class="give__item--info"><span class="large">3</span><span class="small">回プレゼント！</small></div>
         </div>
-        <p>クレンジング/洗顔/フェイスヒーリング/整肌</p>
+        <p>クレンジング/ 洗顔/ フェイスヒーリング/ 整肌</p>
     </section>
 
     <!------------- contact ----------------->
@@ -113,10 +113,10 @@
             <div class="point__logo">
                 <img src="/assets/image/point_logo.png" alt="Kirameki Beauty Labo"> が選ばれる
             </div>
-            <h1 class="point__second--main">3つのポイント</h1>
+            <h2 class="point__second--main">3つのポイント</h2>
             <!-------- point01 --------->
             <div class="point__item">
-                <div class="point__item--title"><div class="point__item_01">POINT1</div><div class="point__item_02">通い放題</div></div>
+                <h3 class="point__item--title"><div class="point__item_01">POINT1</div><div class="point__item_02">通い放題</div></h3>
                 <div class="point__item--info">
                     <p class="point__info--catch">納得いくまで何度でも、追加料金なく安心して通っていただけます。</p>
                     <ol class="point__item--detail flex">
@@ -133,13 +133,16 @@
             </div>
             <!-------- point02 --------->
             <div class="point__item point__second">
-                <div class="point__item--title"><div class="point__item_01">POINT2</div><div class="point__item_02">プランが選べる</div></div>
+                <h3 class="point__item--title point__item--title_02"><div class="point__item_01">POINT2</div><div class="point__item_02">プランが選べる</div></h3>
                 <div class="point__item--info point__item--info_02">
                     <p class="point__info--catch_02">「全身プラン」と、施術部位を選べる「部分脱毛プラン」から自由にお選びいただけます。</p>
                     <ol class="point__box flex">
                         <li>
                             <h1 class="point__second--main_02">全身プラン</h1>
-                            <div class="point__second-pic"><img src="/assets/image/bodyplan_sp.png" alt="全身プラン"></div>
+                            <picture class="point__second-pic">
+                                <source srcset="/assets/image/bodyplan_pc.png" media="(min-width: 768px)">
+                                <img class="point__second-pic-sp" src="/assets/image/bodyplan_sp.png" alt="全身プラン">
+                            </picture>
                         </li>
                     </ol>
                     <h1 class="point__second--main_03">部分脱毛プラン</h1>
@@ -166,14 +169,14 @@
                         </li>
                         <li class="point__second--boxes">
                             <div class="point__second-pic_02"><img src="/assets/image/plan_06.jpg" alt=""></div>
-                            <div class="point__second--name point__second--name_06">フェスライン</div>
+                            <div class="point__second--name point__second--name_06">フェイスライン</div>
                         </li>
                     </ol>
                 </div>
             </div>
             <!-------- point03 --------->
             <div class="point__item point__third">
-                <div class="point__item--title"><div class="point__item_01">POINT3</div><div class="point__item_02">安心のサポート</div></div>
+                <h3 class="point__item--title"><div class="point__item_01">POINT3</div><div class="point__item_02">安心のサポート</div></h3>
                 <div class="point__item--info point__item--info_03">
                     <p class="point__info--catch_03">提携医療機関のサポートがありますので、ご安心ください。</p>
                 </div>
@@ -187,7 +190,7 @@
         <div class="contact__container">
             <h1 class="contact__title">無料体験実施中！</h1>
             <ul class="btn__form">
-                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら(無料)</a></li>
+                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら（無料）</a></li>
             </ul>
         </div>
     </section>
@@ -196,17 +199,17 @@
 
     <section class="course">
         <div class="course__title">ほかにも選べる！</div>
-        <h1 class="course__main">2つのコース</h1>
+        <h2 class="course__main">2つのコース</h2>
         <div class="course__box">
             <div class="course__item">
-                <div class="course__item--title">ボディーコース</div>
+                <h3 class="course__item--title">ボディコース</h3>
                 <div class="course__item--info">
                     <p class="course__info--catch">ボディケアのスペシャリストが、お客様のお肌を優しく施術いたします。</p>
                     <div class="course__pic"><img src="/assets/image/body.jpg" alt=""></div>
                 </div>
             </div>
             <div class="course__item">
-                <div class="course__item--title">フェイシャルコース</div>
+                <h3 class="course__item--title">フェイシャルコース</h3>
                 <div class="course__item--info course__item--info_02">
                     <p class="course__info--catch">確かな技術を持つエステティシャンが、お客様の理想のお肌に近づけます。</p>
                     <div class="course__pic"><img src="/assets/image/facepack.jpg" alt=""></div>
@@ -219,13 +222,13 @@
 
     <section class="voice">
         <div class="voice__content">
-            <h1 class="voice__main">お客様の声</h1>
+            <h2 class="voice__main">お客様の声</h2>
             <div class="swiper__container">
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="voice__item">
-                                <div class="voice__title">フェイシャルコース</div>
+                                <h3 class="voice__title">フェイシャルコース</h3>
                                 <div class="voice__down">
                                     <div class="voice__img"><img src="/assets/image/sample_01.png" alt=""></div>
                                     <div class="voice__down--right">
@@ -237,7 +240,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="voice__item">
-                                <div class="voice__title">脱毛コース</div>
+                                <h3 class="voice__title">脱毛コース</h3>
                                 <div class="voice__down voice__down_02">
                                     <div class="voice__img"><img src="/assets/image/sample_02.png" alt=""></div>
                                     <div class="voice__down--right">
@@ -249,7 +252,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="voice__item">
-                                <div class="voice__title">ボディコース</div>
+                                <h3 class="voice__title">ボディコース</h3>
                                 <div class="voice__down">
                                     <div class="voice__img"><img src="/assets/image/sample_03.png" alt=""></div>
                                     <div class="voice__down--right">
@@ -272,7 +275,7 @@
         <div class="contact__container">
             <h1 class="contact__title">無料体験実施中！</h1>
             <ul class="btn__form">
-                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら(無料)</a></li>
+                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら（無料）</a></li>
             </ul>
         </div>
     </section>
