--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
             <!-------- point03 --------->
             <div class="point__item point__third">
-                <h3 class="point__item--title"><div class="point__item_01">POINT3</div><div class="point__item_02">安心のサポート</div></h3>
+                <h3 class="point__item--title point__item--title_03"><div class="point__item_01">POINT3</div><div class="point__item_02">安心のサポート</div></h3>
                 <div class="point__item--info point__item--info_03">
                     <p class="point__info--catch_03">提携医療機関のサポートがありますので、ご安心ください。</p>
                 </div>
@@ -211,7 +211,7 @@
             <div class="course__item">
                 <h3 class="course__item--title">フェイシャルコース</h3>
                 <div class="course__item--info course__item--info_02">
-                    <p class="course__info--catch">確かな技術を持つエステティシャンが、お客様の理想のお肌に近づけます。</p>
+                    <p class="course__info--catch">確かな技術を持つエステティシャンが<br class=no-sp>、お客様の理想のお肌に近づけます。</p>
                     <div class="course__pic"><img src="/assets/image/facepack.jpg" alt=""></div>
                 </div>
             </div>
@@ -253,7 +253,7 @@
                         <div class="swiper-slide">
                             <div class="voice__item">
                                 <h3 class="voice__title">ボディコース</h3>
-                                <div class="voice__down">
+                                <div class="voice__down voice__down_03">
                                     <div class="voice__img"><img src="/assets/image/sample_03.png" alt=""></div>
                                     <div class="voice__down--right">
                                         <p class="voice__name">20代 Y.Kさま/会社員</p>
