--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <section class="header">
         <div class="header__container">
             <div class="header__logo">
-                <img src="/assets/image/logo.svg" alt="Kirameki Beauty Labo">
+                <a href="/"><img src="/assets/image/logo.svg" alt="Kirameki Beauty Labo"></a>
             </div>
             <ul class="btn__form">
-                <li><a href="#" class="btn btn__form-01">お問い合わせ</a></li>
-                <li><a href="#" class="btn btn__form-02">カウンセリング予約<small class="header__small">(無料)</small></a></li>
+                <li><a href="/contact" class="btn btn__form-01">お問い合わせ</a></li>
+                <li><a href="/reservation" class="btn btn__form-02">カウンセリング予約<small class="header__small">(無料)</small></a></li>
             </ul>
         </div>
     </section>
@@ -80,7 +80,7 @@
     <!------------- give ----------------->
 
     <section class="give">
-        <div class="give__catch">今だけ！</div>
+        <div class="give__catch">今だけ<div class="no-pc">!</div><div class="no-sp">！</div></div>
         <div class="give__item">
             <h3 class="give__item--title">フェイシャルコース</h3>
             <div class="give__item--info"><span class="large">3</span><span class="small">回プレゼント！</small></div>
@@ -94,7 +94,7 @@
         <div class="contact__container">
             <h1 class="contact__title">無料体験実施中！</h1>
             <ul class="btn__form">
-                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら（無料）</a></li>
+                <li><a href="/reservation" class="btn btn__form-02">カウンセリング予約はこちら（無料）</a></li>
             </ul>
         </div>
     </section>
@@ -190,7 +190,7 @@
         <div class="contact__container">
             <h1 class="contact__title">無料体験実施中！</h1>
             <ul class="btn__form">
-                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら（無料）</a></li>
+                <li><a href="/reservation" class="btn btn__form-02">カウンセリング予約はこちら（無料）</a></li>
             </ul>
         </div>
     </section>
@@ -275,7 +275,7 @@
         <div class="contact__container">
             <h1 class="contact__title">無料体験実施中！</h1>
             <ul class="btn__form">
-                <li><a href="#" class="btn btn__form-02">カウンセリング予約はこちら（無料）</a></li>
+                <li><a href="/reservation" class="btn btn__form-02">カウンセリング予約はこちら（無料）</a></li>
             </ul>
         </div>
     </section>
